# crawler

./: .gitignore  project_setup.md  pyproject.toml
src/crawler/: logging.py  main.py
src/crawler/extractors/: base.py  medium.py
src/crawler/fetchers/: browser.py  http.py
