[project]
name = "crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "durlav bose",email = "durlavbose@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "crawler", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
